--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-animated-cursor": "^2.11.2",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-typed": "^2.0.12",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
