--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "node scripts/postinstall.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
