--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "aos": "^3.0.0-beta.6",
+    "lucide-react": "^0.540.0",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-typed": "^2.0.12",
+    "uuid": "^11.1.0",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
